--- a/libros.html
+++ b/libros.html
@@ -9,18 +9,16 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/libros.css">
-    <link href="assets/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="assets/boxicons.min.css" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <script defer src="js/main.js/"></script>
+    <script src="js/main.js/"></script>
     <script src="src/navbar.js"></script>
     <script src="src/footer-copyrigth.js"></script>
-    <script src="assets/jquery/jquery.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+
   </head>
     <body>
       <div id="preloader"></div>
-      <!-- <button type="button" class="btn-float" onclick="window.open('https://wa.me/59174446236','_blank');">
-        <i class="bx bxl-whatsapp"></i>
-      </button> -->
       <header>
         <nav-bar></nav-bar>
       </header>
@@ -33,15 +31,7 @@
       <footer>
         <footer-copyrigth></footer-copyrigth>
       </footer>
-        <!-- preload -->
-        <script>
-          var loader = document.getElementById("preloader");
-          window.addEventListener("load", function(){
-            loader.style.display = "none";
-          })
-        </script>
 
-      
       <script src="js/main.js"></script>
       <script src="src/navbar.js"></script>
       <script src="src/footer-copyrigth.js"></script>
