--- a/index.html
+++ b/index.html
@@ -9,28 +9,12 @@
   <title>CING</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
-  <link href="assets/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/boxicons.min.css" rel="stylesheet">
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-  <script defer src="js/main.js/"></script>
+  <script src="js/main.js/"></script>
   <script src="src/navbar.js"></script>
   <script src="src/footer-copyrigth.js"></script>
-  <script src="assets/jquery/jquery.min.js"></script>
-  <!-- reveal scrolling -->
   <script src="https://unpkg.com/scrollreveal"></script>
-
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1YK109W16L"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-
-    gtag('config', 'G-1YK109W16L');
-  </script>
 
 </head>
 
@@ -119,30 +103,29 @@
     <div class="titulo">
       <h1>Proyectos</h1>
     </div>
-    <div class="project-container">
-      <div class="projects">
-        <div class="proj-card">
-          <img src="img/banner1.jpg" alt="Sample photo">
-          <h1>Proyecto vivienda</h1>
-          <a href="#" class="btn">Here's why</a>
-        </div>
-        <div class="proj-card">
-          <img src="img/banner1.jpg" alt="Sample photo">
-          <h1>Construcción de residencial</h1>
-          <a href="#" class="btn btn-primary btn-block">Here's why</a>
-        </div>
-        <div class="proj-card">
-          <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
-          <h1>Supervición de obras civiles</h1>
-          <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
-        </div>
-        <div class="proj-card">
-          <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
-          <h3>Construcción</h3>
-          <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
-        </div>
+    <div class="projects">
+      <div class="proj-card">
+        <img src="img/banner1.jpg" alt="Sample photo">
+        <h1>Proyecto vivienda</h1>
+        <a href="#" class="btn">Here's why</a>
+      </div>
+      <div class="proj-card">
+        <img src="img/banner1.jpg" alt="Sample photo">
+        <h1>Construcción de residencial</h1>
+        <a href="#" class="btn btn-primary btn-block">Here's why</a>
+      </div>
+      <div class="proj-card">
+        <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
+        <h1>Supervición de obras civiles</h1>
+        <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
+      </div>
+      <div class="proj-card">
+        <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
+        <h3>Construcción</h3>
+        <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
       </div>
     </div>
+
   </section>
   <section id="contact">
     <div class="titulo">
@@ -170,69 +153,10 @@
   <footer id="footer-info">
     <footer-copyrigth></footer-copyrigth>
   </footer>
-  <!-- nav bar scroll state -->
-  <script>
-    const sections = document.querySelectorAll("section");
-    const navLi = document.querySelectorAll("nav .nav ul li");
-    console.log(sections);
-    console.log(navLi);
-    window.addEventListener("scroll", () => {
-      let current = "";
-      sections.forEach((section) => {
-        const sectionTop = section.offsetTop;
-        const sectionHeight = section.clientHeight;
-        console.log("secction top:  " + sectionTop);
-        if (pageYOffset >= sectionTop - sectionHeight / 8) {
-          current = section.getAttribute("id");
-        }
-      });
-
-      navLi.forEach((li) => {
-        li.classList.remove("active");
-        if (li.classList.contains(current)) {
-          li.classList.add("active");
-        }
-      });
-    });
-  </script>
-  <!-- preload -->
-  <script>
-    var loader = document.getElementById("preloader");
-    window.addEventListener("load", function () {
-      loader.style.display = "none";
-    })
-  </script>
-  <!-- scroll reveal -->
-  <script>
-    ScrollReveal({
-      reset: true,
-      distance: '60px',
-      duration: 1500,
-      delay: 100
-    });
-
-    ScrollReveal().reveal('.titulo', {
-      delay: 200,
-      origin: 'left'
-    });
-    ScrollReveal().reveal('.card', {
-      delay: 200
-    });
-    ScrollReveal().reveal('.contact-card', {
-      delay: 200,
-      origin: 'left',
-      interval: 200
-    });
-    ScrollReveal().reveal('.home-text', {
-      delay: 200,
-      origin: 'zoom'
-    });
-  </script>
 
   <script src="js/main.js"></script>
   <script src="src/navbar.js"></script>
   <script src="src/footer-copyrigth.js"></script>
-
 
 </body>
 
