--- a/index.html
+++ b/index.html
@@ -104,25 +104,33 @@
       <h1>Proyectos</h1>
     </div>
     <div class="projects">
-      <div class="proj-card">
-        <img src="img/banner1.jpg" alt="Sample photo">
-        <h1>Proyecto vivienda</h1>
-        <a href="#" class="btn">Here's why</a>
+      <div class="card">
+        <img src="img/proyectos/01.jpg" alt="Sample photo">
+        <div class="card-title">
+          <h1>Diseño de vivienda unifamiliar</h1>
+          <a href="#" class="btn btn-primary btn-block">Más información</a>
+        </div>
       </div>
-      <div class="proj-card">
-        <img src="img/banner1.jpg" alt="Sample photo">
-        <h1>Construcción de residencial</h1>
-        <a href="#" class="btn btn-primary btn-block">Here's why</a>
+      <div class="card">
+        <img src="img/proyectos/02.jpg" alt="Sample photo">
+        <div class="card-title">
+          <h1>Cálculo estructural de edificio</h1>
+          <a href="#" class="btn btn-primary btn-block">Más información</a>
+        </div>
       </div>
-      <div class="proj-card">
-        <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
-        <h1>Supervición de obras civiles</h1>
-        <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
+      <div class="card">
+        <img src="img/proyectos/03.jpg" alt="Sample photo">
+        <div class="card-title">
+          <h1>Diseño geométrico de carretera</h1>
+          <a href="#" class="btn btn-primary btn-block">Más información</a>
+        </div>
       </div>
-      <div class="proj-card">
-        <img src="https://picsum.photos/600/400?image=1063" alt="Sample photo">
-        <h3>Construcción</h3>
-        <a href="https://codepen.io/collection/XdWJOQ/" class="btn btn-primary btn-block">Here's why</a>
+      <div class="card">
+        <img src="img/proyectos/04.jpg" alt="Sample photo">
+        <div class="card-title">
+          <h1>Desarrollo web</h1>
+          <a href="#" class="btn btn-primary btn-block">Más información</a>
+        </div>
       </div>
     </div>
 
