--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <script src="src/navbar.js"></script>
   <script src="src/footer-copyrigth.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
-
 </head>
 
 <body>
@@ -29,7 +28,7 @@
   <section id="home">
     <div class="banner">
       <div class="home-text">
-        <h1>Empresa constructora <span>CING</span></h1>
+        <h1><span>CING</span> Ingeniería</h1>
         <br>
         <h2>Obras civiles, cálculos estructurales, supervision y construcción. Arquitectura, avaluos inmobiliarios,
           diseño de interiores, mobiliario, paisajismo.</h2>
