--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
   <script src="src/navbar.js"></script>
   <script src="src/footer-copyrigth.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0ZZGM99SKG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-0ZZGM99SKG');
+  </script>
 </head>
 
 <body>
