--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
           <div class="prev">
             <a href="https://www.youtube.com/watch?v=Rn9hS7XsJas&t=152s">Programa de métodos numéricos para calculadora
               HP-PRIME</a>
-            <h3>Fecha de publicación: <span>01-01-2022</span></h3>
+            <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
         </div>
         <div class="blog-card" id="07">
@@ -45,7 +45,7 @@
           <div class="prev">
             <a href="https://www.youtube.com/watch?v=kyPu_rl64so&t=51s">Programa de métodos numéricos para calculadora
               HP-PRIME</a>
-            <h3>Fecha de publicación: <span>01-01-2022</span></h3>
+              <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
         </div>
         <div class="blog-card" id="06">
@@ -55,7 +55,7 @@
           <div class="prev">
             <a href="https://www.youtube.com/watch?v=66ZuwmUFo4E">Programa de métodos numéricos para calculadora
               HP-PRIME</a>
-            <h3>Fecha de publicación: <span>01-01-2022</span></h3>
+              <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
         </div>
         <div class="blog-card" id="05">
@@ -65,7 +65,7 @@
           <div class="prev">
             <a href="https://www.youtube.com/watch?v=kxmyn1-Xzp0">Programa de métodos numéricos para calculadora
               HP-PRIME</a>
-            <h3>Fecha de publicación: <span>01-01-2022</span></h3>
+              <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
         </div>
         <div class="blog-card" id="04">
@@ -75,7 +75,7 @@
           <div class="prev">
             <a href="https://www.youtube.com/watch?v=Ay6xStz7Bug">Programa de métodos numéricos para calculadora
               HP-PRIME</a>
-            <h3>Fecha de publicación: <span>01-01-2022</span></h3>
+              <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
         </div>
         <div class="blog-card" id="03">
@@ -84,7 +84,7 @@
             alt="Sample photo">
           <div class="prev">
             <a href="https://www.youtube.com/watch?v=lLLRIZwkF0s&t=1s">Cálculo de escalas | Programa HP-PRIME</a>
-            <h3>Fecha de publicación: <span>01-01-2022</span></h3>
+            <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
         </div>
         <div class="blog-card" id="02">
@@ -93,7 +93,7 @@
             alt="Sample photo">
           <div class="prev">
             <a href="https://www.youtube.com/watch?v=-0iDc3fONWA">Cálculo de ladrillos | Programa HP-PRIME</a>
-            <h3>Fecha de publicación: <span>01-01-2022</span></h3>
+            <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
         </div>
         <div class="blog-card" id="01">
@@ -103,7 +103,7 @@
           <div class="prev">
             <a href="https://www.youtube.com/watch?v=xoCraOj0c3g">Implementación de interface gráfica para calcular
               áreas en HP-PRIME</a>
-            <h3>Fecha de publicación: <span>01-01-2022</span></h3>
+              <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
         </div>
       </div>
