edit title blogs

--- a/blog.html
+++ b/blog.html
@@ -42,8 +42,7 @@
             src="https://i.ytimg.com/vi/kyPu_rl64so/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCJKZ-iZgsIT-g0049do1XjfHubCA"
             alt="Sample photo">
           <div class="prev">
-            <a href="https://www.youtube.com/watch?v=kyPu_rl64so&t=51s"><i class='bx bxl-youtube'></i>Programa de métodos numéricos para calculadora
-              HP-PRIME</a>
+            <a href="https://www.youtube.com/watch?v=kyPu_rl64so&t=51s"><i class='bx bxl-youtube'></i>Programa de métodos numéricos para calculadora HP-PRIME</a>
               <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
         </div>
@@ -52,8 +51,7 @@
             src="https://i.ytimg.com/vi/66ZuwmUFo4E/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCp6Wlg-NXZqlMf0xkUo3wlvd41iw"
             alt="Sample photo">
           <div class="prev">
-            <a href="https://www.youtube.com/watch?v=66ZuwmUFo4E"><i class='bx bxl-youtube'></i>Programa de métodos numéricos para calculadora
-              HP-PRIME</a>
+            <a href="https://www.youtube.com/watch?v=66ZuwmUFo4E"><i class='bx bxl-youtube'></i>Interpolación de curvas de nivel | Programa HP-PRIME</a>
               <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
         </div>
@@ -62,8 +60,7 @@
             src="https://i.ytimg.com/vi/kxmyn1-Xzp0/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCuUmbsM4NkffxnA5o3jWiSk74OWA"
             alt="Sample photo">
           <div class="prev">
-            <a href="https://www.youtube.com/watch?v=kxmyn1-Xzp0"><i class='bx bxl-youtube'></i>Programa de métodos numéricos para calculadora
-              HP-PRIME</a>
+            <a href="https://www.youtube.com/watch?v=kxmyn1-Xzp0"><i class='bx bxl-youtube'></i>Cómo pasar dibujos desde AutoCad a la calculadora HP-PRIME</a>
               <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
         </div>
@@ -72,8 +69,7 @@
             src="https://i.ytimg.com/vi/Ay6xStz7Bug/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLDT4RWT7ekfKMntnnjNzfIkn2Kkng"
             alt="Sample photo">
           <div class="prev">
-            <a href="https://www.youtube.com/watch?v=Ay6xStz7Bug"><i class='bx bxl-youtube'></i>Programa de métodos numéricos para calculadora
-              HP-PRIME</a>
+            <a href="https://www.youtube.com/watch?v=Ay6xStz7Bug"><i class='bx bxl-youtube'></i>Cálculo de propiedades geométricas | Programa HP-PRIME</a>
               <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
         </div>
