--- a/libros.html
+++ b/libros.html
@@ -37,7 +37,7 @@
       </button>
     </div>
     <div id="ulList" class="libContainer">
-      <div class="libList">
+      <div class="libList contentHide">
         <div class="listContent">
           <h1>Contenido</h1>
           <ul>
@@ -53,7 +53,7 @@
           </ul>
         </div>
         <div class="hide-list">
-          <i class='hide bx bx-chevron-left'></i>
+          <i class='hide bx bx-chevron-down'></i>
         </div>
       </div>
       <div class="library-container">
