--- a/index.html
+++ b/index.html
@@ -172,6 +172,42 @@
   <footer id="footer-info">
     <footer-copyrigth></footer-copyrigth>
   </footer>
+  <script>
+    ScrollReveal({
+    reset: true,
+    distance: '60px',
+    duration: 1500,
+    delay: 100
+});
+ScrollReveal().reveal('.titulo', {
+    delay: 200,
+    origin: 'left'
+});
+ScrollReveal().reveal('.card', {
+    delay: 100,
+    origin: 'bottom',
+    interval: 100
+});
+ScrollReveal().reveal('.proj-card', {
+    delay: 100,
+    origin: 'bottom',
+    interval: 100
+});
+ScrollReveal().reveal('.blog-card', {
+    delay: 100,
+    origin: 'bottom',
+    interval: 100
+});
+ScrollReveal().reveal('.contact-card', {
+    delay: 100,
+    origin: 'left',
+    interval: 100
+});
+ScrollReveal().reveal('.home-text', {
+    delay: 100,
+    origin: 'zoom'
+});
+  </script>
 
   <script src="js/main.js"></script>
   <script src="src/navbar.js"></script>
