acctulizacion de los archivos

--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
       <div class="home-text">
         <h1><span>CING</span> Ingeniería</h1>
         <br>
-        <h2>Obras civiles, cálculos estructurales, supervision y construcción. Arquitectura, avaluos inmobiliarios,
-          diseño de interiores, mobiliario, paisajismo.</h2>
+        <ul>
+          <li>Obras civiles</li>
+          <li>Cálculos y diseños estructurales</li>
+          <li>Supervición</li>
+          <li>Biblioteca de Ingeniería Civil</li>
+        </ul>
       </div>
     </div>
   </section>
@@ -119,28 +123,28 @@
         <img src="img/proyectos/01.jpg" alt="Sample photo">
         <div class="card-title">
           <h1>Diseño de vivienda unifamiliar</h1>
-          <a href="#" class="btn btn-primary btn-block">Más información</a>
+          <a href="#" class="btn btn-primary btn-block">Ver projecto</a>
         </div>
       </div>
       <div class="card">
         <img src="img/proyectos/02.jpg" alt="Sample photo">
         <div class="card-title">
           <h1>Cálculo estructural de edificio</h1>
-          <a href="#" class="btn btn-primary btn-block">Más información</a>
+          <a href="#" class="btn btn-primary btn-block">Ver proyecto</a>
         </div>
       </div>
       <div class="card">
         <img src="img/proyectos/03.jpg" alt="Sample photo">
         <div class="card-title">
           <h1>Diseño geométrico de carretera</h1>
-          <a href="#" class="btn btn-primary btn-block">Más información</a>
+          <a href="#" class="btn btn-primary btn-block">Ver proyecto</a>
         </div>
       </div>
       <div class="card">
         <img src="img/proyectos/04.jpg" alt="Sample photo">
         <div class="card-title">
           <h1>Desarrollo web</h1>
-          <a href="#" class="btn btn-primary btn-block">Más información</a>
+          <a href="#" class="btn btn-primary btn-block">Ver proyecto</a>
         </div>
       </div>
     </div>
@@ -173,7 +177,7 @@
     <footer-copyrigth></footer-copyrigth>
   </footer>
   <script>
-    
+
   </script>
 
   <script src="js/main.js"></script>
