--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
             src="https://i.ytimg.com/vi/Rn9hS7XsJas/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLApY96RmIIOoztnD533fE617ngIqA"
             alt="Sample photo">
           <div class="prev">
-            <a href="https://www.youtube.com/watch?v=Rn9hS7XsJas&t=152s"><i class='bx bxl-youtube'></i>Programa de
+            <a href="https://www.youtube.com/watch?v=Rn9hS7XsJas&t=152s" target="_blank"><i class='bx bxl-youtube'></i>Programa de
               métodos numéricos para calculadora HP-PRIME</a>
             <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
@@ -43,7 +43,7 @@
             src="https://i.ytimg.com/vi/kyPu_rl64so/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCJKZ-iZgsIT-g0049do1XjfHubCA"
             alt="Sample photo">
           <div class="prev">
-            <a href="https://www.youtube.com/watch?v=kyPu_rl64so&t=51s"><i class='bx bxl-youtube'></i>Programa de
+            <a href="https://www.youtube.com/watch?v=kyPu_rl64so&t=51s" target="_blank"><i class='bx bxl-youtube'></i>Programa de
               métodos numéricos para calculadora HP-PRIME</a>
             <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
@@ -53,7 +53,7 @@
             src="https://i.ytimg.com/vi/66ZuwmUFo4E/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCp6Wlg-NXZqlMf0xkUo3wlvd41iw"
             alt="Sample photo">
           <div class="prev">
-            <a href="https://www.youtube.com/watch?v=66ZuwmUFo4E"><i class='bx bxl-youtube'></i>Interpolación de curvas
+            <a href="https://www.youtube.com/watch?v=66ZuwmUFo4E" target="_blank"><i class='bx bxl-youtube'></i>Interpolación de curvas
               de nivel | Programa HP-PRIME</a>
             <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
@@ -63,7 +63,7 @@
             src="https://i.ytimg.com/vi/kxmyn1-Xzp0/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCuUmbsM4NkffxnA5o3jWiSk74OWA"
             alt="Sample photo">
           <div class="prev">
-            <a href="https://www.youtube.com/watch?v=kxmyn1-Xzp0"><i class='bx bxl-youtube'></i>Cómo pasar dibujos desde
+            <a href="https://www.youtube.com/watch?v=kxmyn1-Xzp0" target="_blank"><i class='bx bxl-youtube'></i>Cómo pasar dibujos desde
               AutoCad a la calculadora HP-PRIME</a>
             <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
@@ -73,7 +73,7 @@
             src="https://i.ytimg.com/vi/Ay6xStz7Bug/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLDT4RWT7ekfKMntnnjNzfIkn2Kkng"
             alt="Sample photo">
           <div class="prev">
-            <a href="https://www.youtube.com/watch?v=Ay6xStz7Bug"><i class='bx bxl-youtube'></i>Cálculo de propiedades
+            <a href="https://www.youtube.com/watch?v=Ay6xStz7Bug" target="_blank"><i class='bx bxl-youtube'></i>Cálculo de propiedades
               geométricas | Programa HP-PRIME</a>
             <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
@@ -83,7 +83,7 @@
             src="https://i.ytimg.com/vi/lLLRIZwkF0s/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBWSiXIeH7akutJoRWT1E5_JkSPhw"
             alt="Sample photo">
           <div class="prev">
-            <a href="https://www.youtube.com/watch?v=lLLRIZwkF0s&t=1s"><i class='bx bxl-youtube'></i>Cálculo de escalas
+            <a href="https://www.youtube.com/watch?v=lLLRIZwkF0s&t=1s" target="_blank"><i class='bx bxl-youtube'></i>Cálculo de escalas
               | Programa HP-PRIME</a>
             <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
@@ -93,7 +93,7 @@
             src="https://i.ytimg.com/vi/-0iDc3fONWA/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLAqQ_2pJ_UyHBxBt-OBSw1a_Jr7XA"
             alt="Sample photo">
           <div class="prev">
-            <a href="https://www.youtube.com/watch?v=-0iDc3fONWA"><i class='bx bxl-youtube'></i>Cálculo de ladrillos |
+            <a href="https://www.youtube.com/watch?v=-0iDc3fONWA" target="_blank"><i class='bx bxl-youtube'></i>Cálculo de ladrillos |
               Programa HP-PRIME</a>
             <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
@@ -103,7 +103,7 @@
             src="https://i.ytimg.com/vi/xoCraOj0c3g/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCvfngMLtLttlP7YkRkgHtD1mT7hA"
             alt="Sample photo">
           <div class="prev">
-            <a href="https://www.youtube.com/watch?v=xoCraOj0c3g"><i class='bx bxl-youtube'></i>Implementación de
+            <a href="https://www.youtube.com/watch?v=xoCraOj0c3g" target="_blank"><i class='bx bxl-youtube'></i>Implementación de
               interface gráfica para calcular
               áreas en HP-PRIME</a>
             <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
