--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
         </div>
       </div>
     </div>
+    <div class="box-modal-project">
+      <!--  -->
+    </div>
 
   </section>
   <section id="contact">
