--- a/libros.html
+++ b/libros.html
@@ -52,6 +52,10 @@
             <li class="list">
               <a href="#resistencia-de-materiales2">Resistencia de Materiales 2</a>
             </li>
+            <li class="list">
+              <a href="#suelos-y-geotecnia">Suelos y geotecnia</a>
+            </li>
+            <li class="list"><a href="#topografia">Topografía</a></li>
           </ul>
         </div>
         <div class="display-style-btns">
@@ -1217,6 +1221,128 @@
             </div>
           </a>
         </div>
+      </div>
+      <div class="content-title">
+        <h3>SUELOS Y GEOTECNIA</h3>
+      </div>
+      <div id="suelos-y-geotecnia" class="fileContent">
+        <div class="fileCard">
+          <a href="https://drive.google.com/file/d/14rLY_R4ksAv2INcCyapChXYncb77sAK_/view?usp=drivesdk" target="_blank">
+            <div class="cover-file">
+              <img src="img/libros/Problemas resueltos de Mecánica de suelos 1 y 2.pdf.png" alt="default image" />
+            </div>
+            <div class="card-footer">
+              <i class="bx bxs-file-pdf"></i>
+              <p>Problemas resueltos de Mecánica de suelos 1 y 2.pdf</p>
+            </div>
+          </a>
+        </div>
+        <div class="fileCard">
+          <a href="https://drive.google.com/file/d/1YAxDzx9LJ-NnIT0bIWfSVC5I-Ii3T7Gy/view?usp=drivesdk" target="_blank">
+            <div class="cover-file">
+              <img src="img/libros/Solucionario, Principles of geotechnical engineering - Braja M. Das (6th ed).pdf.png"
+                alt="default image" />
+            </div>
+            <div class="card-footer">
+              <i class="bx bxs-file-pdf"></i>
+              <p>
+                Solucionario, Principles of geotechnical engineering - Braja
+                M. Das (6th ed).pdf
+              </p>
+            </div>
+          </a>
+        </div>
+        <div class="fileCard">
+          <a href="https://drive.google.com/file/d/1hl0qp_ObQTT5jQY_7lhHodxNTVdq4jzp/view?usp=drivesdk" target="_blank">
+            <div class="cover-file">
+              <img src="img/libros/Solucionario de los examenes de mecanica de suelos II-mas calculos de exel.pdf.png"
+                alt="default image" />
+            </div>
+            <div class="card-footer">
+              <i class="bx bxs-file-pdf"></i>
+              <p>
+                Solucionario de los examenes de mecanica de suelos II-mas
+                calculos de exel.pdf
+              </p>
+            </div>
+          </a>
+        </div>
+        <div class="fileCard">
+          <a href="https://drive.google.com/file/d/1HTkGqDWKSHZ1fNvxwUjqboL_7s71FY4U/view?usp=drivesdk" target="_blank">
+            <div class="cover-file">
+              <img src="img/libros/Manual de Mecanica de Suelos - UMSH.pdf.png" alt="default image" />
+            </div>
+            <div class="card-footer">
+              <i class="bx bxs-file-pdf"></i>
+              <p>Manual de Mecanica de Suelos - UMSH.pdf</p>
+            </div>
+          </a>
+        </div>
+        <div class="fileCard">
+          <a href="https://drive.google.com/file/d/1RrenAD8AzJkoAEf7s0FAG0jFYxps7SLl/view?usp=drivesdk" target="_blank">
+            <div class="cover-file">
+              <img src="img/libros/Manual de Laboratorio de Suelos - Josephe E Bowles.pdf.png" alt="default image" />
+            </div>
+            <div class="card-footer">
+              <i class="bx bxs-file-pdf"></i>
+              <p>Manual de Laboratorio de Suelos - Josephe E Bowles.pdf</p>
+            </div>
+          </a>
+        </div>
+        <div class="fileCard">
+          <a href="https://drive.google.com/file/d/1qf3wfvQt_XgjbpZlfUnpBCxmudyZv_UV/view?usp=drivesdk" target="_blank">
+            <div class="cover-file">
+              <img src="img/libros/Laboratorio de Mecanica de Suelos.pdf.png" alt="default image" />
+            </div>
+            <div class="card-footer">
+              <i class="bx bxs-file-pdf"></i>
+              <p>Laboratorio de Mecanica de Suelos.pdf</p>
+            </div>
+          </a>
+        </div>
+        <div class="fileCard">
+          <a href="https://drive.google.com/file/d/1a2XHqa4gpC0yCNMXaU_BzYC8jLywO6xJ/view?usp=drivesdk" target="_blank">
+            <div class="cover-file">
+              <img src="img/libros/Fundamentos De Ingeniería Geotécnica - Braja M. Das (4ta Edición).pdf.png"
+                alt="default image" />
+            </div>
+            <div class="card-footer">
+              <i class="bx bxs-file-pdf"></i>
+              <p>
+                Fundamentos De Ingeniería Geotécnica - Braja M. Das (4ta
+                Edición).pdf
+              </p>
+            </div>
+          </a>
+        </div>
+        <div class="fileCard">
+          <a href="https://drive.google.com/file/d/1aKtQyMRj21n2jQGgK0qzV70YiBhPOLLV/view?usp=drivesdk" target="_blank">
+            <div class="cover-file">
+              <img src="img/libros/Fundamentos de ingenieria de cimentaciones - Braja M. Das (7ma Ed).pdf.png"
+                alt="default image" />
+            </div>
+            <div class="card-footer">
+              <i class="bx bxs-file-pdf"></i>
+              <p>
+                Fundamentos de ingenieria de cimentaciones - Braja M. Das (7ma
+                Ed).pdf
+              </p>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="content-title">
+        <h3>TOPOGRAFÍA</h3>
+      </div>
+      <div id="topografia" class="fileContent">
+        <div class='fileCard'> <a href='https://drive.google.com/file/d/1MYF3Oq5Cb2tCjJG56BTl5VdgS_5wUvVg/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Topografia - Serafin Lopez (2da Edición).pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Topografia - Serafin Lopez (2da Edición).pdf</p> </div> </a> </div>
+        <div class='fileCard'> <a href='https://drive.google.com/file/d/1dyKRcbId3kLJON5SQwNhCh_sgM8F97i3/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Topografia Aplicada - Nestor Villalba.pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Topografia Aplicada - Nestor Villalba.pdf</p> </div> </a> </div>
+        <div class='fileCard'> <a href='https://drive.google.com/file/d/1P4XPh0nEIfaUjC1MjDYBDj5H1WL1ZA0Z/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Topografía para ingenieros civiles - Gonzalo Jiménez Cleves.pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Topografía para ingenieros civiles - Gonzalo Jiménez Cleves.pdf</p> </div> </a> </div>
+        <div class='fileCard'> <a href='https://drive.google.com/file/d/10muUHFrKvS9rpgNa0myk6zsXq4Q5tJEV/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Topografía y Replanteos - Antonio Gonzáles (4ta Ed).pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Topografía y Replanteos - Antonio Gonzáles (4ta Ed).pdf</p> </div> </a> </div>
+        <div class='fileCard'> <a href='https://drive.google.com/file/d/1oy6AXEnQgCOryag-K5sKpychDJeoUSsU/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Manual de prácticas de topografía y cartografía - Jacinto Santamaria, Teófilo Zanz.pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Manual de prácticas de topografía y cartografía - Jacinto Santamaria, Teófilo Zanz.pdf</p> </div> </a> </div>
+        <div class='fileCard'> <a href='https://drive.google.com/file/d/1118Wm_3D95THOiVUDCqzVAu6UcOgs3MY/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Curso Básico de Topografía - Fernando García.pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Curso Básico de Topografía - Fernando García.pdf</p> </div> </a> </div>
+        <div class='fileCard'> <a href='https://drive.google.com/file/d/1KElUg9wqNjhT8hadvdJ2-PZ335wEb8XX/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Manual de Topografía Aplicada - Fernando García.pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Manual de Topografía Aplicada - Fernando García.pdf</p> </div> </a> </div>
+        <div class='fileCard'> <a href='https://drive.google.com/file/d/19pM25rToZDeZHvVSeJrsM5_eIiFg89fy/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Topografía - Paul R. Wolf (14va Edición).pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Topografía - Paul R. Wolf (14va Edición).pdf</p> </div> </a> </div>
       </div>
     </div>
     <!-- </div> -->
