--- a/libros.html
+++ b/libros.html
@@ -59,6 +59,9 @@
           </ul>
         </div>
         <div class="display-style-btns">
+          <div class="num-files">
+            <p id="num-text"></p>
+          </div>
           <button type="button" id="grid-active-btn">
             <i class="bx bxs-grid"></i>
           </button>
@@ -1226,110 +1229,21 @@
         <h3>SUELOS Y GEOTECNIA</h3>
       </div>
       <div id="suelos-y-geotecnia" class="fileContent">
-        <div class="fileCard">
-          <a href="https://drive.google.com/file/d/14rLY_R4ksAv2INcCyapChXYncb77sAK_/view?usp=drivesdk" target="_blank">
-            <div class="cover-file">
-              <img src="img/libros/Problemas resueltos de Mecánica de suelos 1 y 2.pdf.png" alt="default image" />
-            </div>
-            <div class="card-footer">
-              <i class="bx bxs-file-pdf"></i>
-              <p>Problemas resueltos de Mecánica de suelos 1 y 2.pdf</p>
-            </div>
-          </a>
-        </div>
-        <div class="fileCard">
-          <a href="https://drive.google.com/file/d/1YAxDzx9LJ-NnIT0bIWfSVC5I-Ii3T7Gy/view?usp=drivesdk" target="_blank">
-            <div class="cover-file">
-              <img src="img/libros/Solucionario, Principles of geotechnical engineering - Braja M. Das (6th ed).pdf.png"
-                alt="default image" />
-            </div>
-            <div class="card-footer">
-              <i class="bx bxs-file-pdf"></i>
-              <p>
-                Solucionario, Principles of geotechnical engineering - Braja
-                M. Das (6th ed).pdf
-              </p>
-            </div>
-          </a>
-        </div>
-        <div class="fileCard">
-          <a href="https://drive.google.com/file/d/1hl0qp_ObQTT5jQY_7lhHodxNTVdq4jzp/view?usp=drivesdk" target="_blank">
-            <div class="cover-file">
-              <img src="img/libros/Solucionario de los examenes de mecanica de suelos II-mas calculos de exel.pdf.png"
-                alt="default image" />
-            </div>
-            <div class="card-footer">
-              <i class="bx bxs-file-pdf"></i>
-              <p>
-                Solucionario de los examenes de mecanica de suelos II-mas
-                calculos de exel.pdf
-              </p>
-            </div>
-          </a>
-        </div>
-        <div class="fileCard">
-          <a href="https://drive.google.com/file/d/1HTkGqDWKSHZ1fNvxwUjqboL_7s71FY4U/view?usp=drivesdk" target="_blank">
-            <div class="cover-file">
-              <img src="img/libros/Manual de Mecanica de Suelos - UMSH.pdf.png" alt="default image" />
-            </div>
-            <div class="card-footer">
-              <i class="bx bxs-file-pdf"></i>
-              <p>Manual de Mecanica de Suelos - UMSH.pdf</p>
-            </div>
-          </a>
-        </div>
-        <div class="fileCard">
-          <a href="https://drive.google.com/file/d/1RrenAD8AzJkoAEf7s0FAG0jFYxps7SLl/view?usp=drivesdk" target="_blank">
-            <div class="cover-file">
-              <img src="img/libros/Manual de Laboratorio de Suelos - Josephe E Bowles.pdf.png" alt="default image" />
-            </div>
-            <div class="card-footer">
-              <i class="bx bxs-file-pdf"></i>
-              <p>Manual de Laboratorio de Suelos - Josephe E Bowles.pdf</p>
-            </div>
-          </a>
-        </div>
-        <div class="fileCard">
-          <a href="https://drive.google.com/file/d/1qf3wfvQt_XgjbpZlfUnpBCxmudyZv_UV/view?usp=drivesdk" target="_blank">
-            <div class="cover-file">
-              <img src="img/libros/Laboratorio de Mecanica de Suelos.pdf.png" alt="default image" />
-            </div>
-            <div class="card-footer">
-              <i class="bx bxs-file-pdf"></i>
-              <p>Laboratorio de Mecanica de Suelos.pdf</p>
-            </div>
-          </a>
-        </div>
-        <div class="fileCard">
-          <a href="https://drive.google.com/file/d/1a2XHqa4gpC0yCNMXaU_BzYC8jLywO6xJ/view?usp=drivesdk" target="_blank">
-            <div class="cover-file">
-              <img src="img/libros/Fundamentos De Ingeniería Geotécnica - Braja M. Das (4ta Edición).pdf.png"
-                alt="default image" />
-            </div>
-            <div class="card-footer">
-              <i class="bx bxs-file-pdf"></i>
-              <p>
-                Fundamentos De Ingeniería Geotécnica - Braja M. Das (4ta
-                Edición).pdf
-              </p>
-            </div>
-          </a>
-        </div>
-        <div class="fileCard">
-          <a href="https://drive.google.com/file/d/1aKtQyMRj21n2jQGgK0qzV70YiBhPOLLV/view?usp=drivesdk" target="_blank">
-            <div class="cover-file">
-              <img src="img/libros/Fundamentos de ingenieria de cimentaciones - Braja M. Das (7ma Ed).pdf.png"
-                alt="default image" />
-            </div>
-            <div class="card-footer">
-              <i class="bx bxs-file-pdf"></i>
-              <p>
-                Fundamentos de ingenieria de cimentaciones - Braja M. Das (7ma
-                Ed).pdf
-              </p>
-            </div>
-          </a>
-        </div>
+        <div class='fileCard'> <a href='https://drive.google.com/file/d/1tupO32q_Rr6afJEp3VIslW7YGFJhzEtU/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Suelos, Fundaciones y Muros - Maria Graciela Fratelli.pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Suelos, Fundaciones y Muros - Maria Graciela Fratelli.pdf</p> </div> </a> </div>
+<div class='fileCard'> <a href='https://drive.google.com/file/d/179xghtvEzTTqsSFhmHMFDZD9TVijvoUk/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Mecánica de Suelos - Eulalio Juarez (Tomo 1).pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Mecánica de Suelos - Eulalio Juarez (Tomo 1).pdf</p> </div> </a> </div>
+<div class='fileCard'> <a href='https://drive.google.com/file/d/1aNCntc3E9aKe1079a1Wt-bYQUnKaudWH/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Mécanica de Suelos y Cimentaciones - Cespo Villalaz.pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Mécanica de Suelos y Cimentaciones - Cespo Villalaz.pdf</p> </div> </a> </div>
+<div class='fileCard'> <a href='https://drive.google.com/file/d/1Y1-3jtTi3pPieUOrtLoctMH4wnSP-AFe/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Mecánica de Suelos - Juares Ballido, Rico R. (Tomo 2).pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Mecánica de Suelos - Juares Ballido, Rico R. (Tomo 2).pdf</p> </div> </a> </div>
+<div class='fileCard'> <a href='https://drive.google.com/file/d/1LDtFiMYT7miDZhYSA6w0lth7v7PVtsvu/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Mecánica de Suelos - Eulalio Juarez (Tomo 2).pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Mecánica de Suelos - Eulalio Juarez (Tomo 2).pdf</p> </div> </a> </div>
+<div class='fileCard'> <a href='https://drive.google.com/file/d/1x48poaCAVWYvIZw1ZoIR6HCjchKhgycf/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Mecanica de suelos - Juarez Badillo, Rico R. (Tomo 1).pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Mecanica de suelos - Juarez Badillo, Rico R. (Tomo 1).pdf</p> </div> </a> </div>
+<div class='fileCard'> <a href='https://drive.google.com/file/d/1lOZb8EcKX10v34CcEh04vGPDwqQ-nyW4/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Problemas de Mecánica de Suelos - Angel R. Huanca.pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Problemas de Mecánica de Suelos - Angel R. Huanca.pdf</p> </div> </a> </div>
+<div class='fileCard'> <a href='https://drive.google.com/file/d/14rLY_R4ksAv2INcCyapChXYncb77sAK_/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Problemas resueltos de Mecánica de suelos 1 y 2.pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Problemas resueltos de Mecánica de suelos 1 y 2.pdf</p> </div> </a> </div>
+<div class='fileCard'> <a href='https://drive.google.com/file/d/1YAxDzx9LJ-NnIT0bIWfSVC5I-Ii3T7Gy/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Solucionario, Principles of geotechnical engineering - Braja M. Das (6th ed).pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Solucionario, Principles of geotechnical engineering - Braja M. Das (6th ed).pdf</p> </div> </a> </div>
+<div class='fileCard'> <a href='https://drive.google.com/file/d/1hl0qp_ObQTT5jQY_7lhHodxNTVdq4jzp/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Solucionario de los examenes de mecanica de suelos II-mas calculos de exel.pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Solucionario de los examenes de mecanica de suelos II-mas calculos de exel.pdf</p> </div> </a> </div>
+<div class='fileCard'> <a href='https://drive.google.com/file/d/1HTkGqDWKSHZ1fNvxwUjqboL_7s71FY4U/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Manual de Mecanica de Suelos - UMSH.pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Manual de Mecanica de Suelos - UMSH.pdf</p> </div> </a> </div>
+<div class='fileCard'> <a href='https://drive.google.com/file/d/1RrenAD8AzJkoAEf7s0FAG0jFYxps7SLl/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Manual de Laboratorio de Suelos - Josephe E Bowles.pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Manual de Laboratorio de Suelos - Josephe E Bowles.pdf</p> </div> </a> </div>
+<div class='fileCard'> <a href='https://drive.google.com/file/d/1qf3wfvQt_XgjbpZlfUnpBCxmudyZv_UV/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Laboratorio de Mecanica de Suelos.pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Laboratorio de Mecanica de Suelos.pdf</p> </div> </a> </div>
+<div class='fileCard'> <a href='https://drive.google.com/file/d/1a2XHqa4gpC0yCNMXaU_BzYC8jLywO6xJ/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Fundamentos De Ingeniería Geotécnica - Braja M. Das (4ta Edición).pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Fundamentos De Ingeniería Geotécnica - Braja M. Das (4ta Edición).pdf</p> </div> </a> </div>
+<div class='fileCard'> <a href='https://drive.google.com/file/d/1aKtQyMRj21n2jQGgK0qzV70YiBhPOLLV/view?usp=drivesdk'target='_blank'> <div class='cover-file'> <img src='img/libros/Fundamentos de ingenieria de cimentaciones - Braja M. Das (7ma Ed).pdf.png' alt='default image'> </div> <div class='card-footer'> <i class='bx bxs-file-pdf'></i> <p>Fundamentos de ingenieria de cimentaciones - Braja M. Das (7ma Ed).pdf</p> </div> </a> </div>
       </div>
       <div class="content-title">
         <h3>TOPOGRAFÍA</h3>
@@ -1353,6 +1267,11 @@
   </footer>
 
   <script>
+    const cardFiles = document.querySelectorAll('.fileCard')
+    const numFiles = cardFiles.length;
+    const adText =  document.getElementById('num-text');
+    adText.innerHTML= numFiles + "  Archivos disponibles";
+    console.log(numFiles);
     const itemList = document.querySelector(".library-container");
     const gridViewBtn = document.getElementById("grid-active-btn");
     const detailsViewBtn = document.getElementById("details-active-btn");
