se añadío boton de descarga directa

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
           <li>Obras civiles</li>
           <li>Cálculos y diseños estructurales</li>
           <li>Supervición</li>
-          <li>Biblioteca de Ingeniería Civil</li>
         </ul>
       </div>
     </div>
@@ -123,32 +122,35 @@
         <img src="img/proyectos/01.jpg" alt="Sample photo">
         <div class="card-title">
           <h1>Diseño de vivienda unifamiliar</h1>
-          <a href="#" class="btn btn-primary btn-block">Ver projecto</a>
+          <button class="btn-card"> Ver proyecto</button>
         </div>
       </div>
       <div class="card">
         <img src="img/proyectos/02.jpg" alt="Sample photo">
         <div class="card-title">
           <h1>Cálculo estructural de edificio</h1>
-          <a href="#" class="btn btn-primary btn-block">Ver proyecto</a>
+          <button class="btn-card"> Ver proyecto</button>
         </div>
       </div>
       <div class="card">
         <img src="img/proyectos/03.jpg" alt="Sample photo">
         <div class="card-title">
           <h1>Diseño geométrico de carretera</h1>
-          <a href="#" class="btn btn-primary btn-block">Ver proyecto</a>
+          <button class="btn-card"> Ver proyecto</button>
         </div>
       </div>
       <div class="card">
         <img src="img/proyectos/04.jpg" alt="Sample photo">
         <div class="card-title">
           <h1>Desarrollo web</h1>
-          <a href="#" class="btn btn-primary btn-block">Ver proyecto</a>
+          <button class="btn-card"> Ver proyecto</button>
         </div>
       </div>
     </div>
-    <div class="box-modal-project">
+    <div class="box-modal-project hide">
+      <div class="close-box">
+        <i id="close-box" class="bx bx-x"></i>
+      </div>
       <!--  -->
     </div>
 
