--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -240,8 +240,7 @@
                         <div class="proyectos-wrap">
                             <img alt="Web API Templates" class="img-fluid" src="assets/img/proyectos/robots.jpg">
                             <div class="proyectos-links">
-                                <a class="venobox" data-gall="proyectosGallery" href="assets/img/proyectos/robots.jpg"
-                                    title="Web API Templates"><i class="bx bx-plus"></i></a>
+                                <a class="venobox" data-gall="proyectosGallery" href="assets/img/proyectos/robots.jpg" title="Web API Templates"><i class="bx bx-plus"></i></a>
                                 <a href="#" title="Mas detalles"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
